components/rag-sep10-2-py312/base/deployment-database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels: 
    app.kubernetes.io/instance: rag-sep10-2-py312-database
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: rag-sep10-2-py312-database
    app.kubernetes.io/part-of: rag-sep10-2-py312  
  name: rag-sep10-2-py312-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: rag-sep10-2-py312-database
  template:
    metadata: 
      labels:
        app.kubernetes.io/instance: rag-sep10-2-py312-database
    spec:
      containers:
      - image: quay.io/redhat-ai-dev/chroma:latest
        name: database
        args: [
            "--workers",
            "1", 
            "--host", 
            "0.0.0.0",
            "--port",
            "8000",
            "--proxy-headers", 
            "--log-config", 
            "chromadb/log_config.yml", 
            "--timeout-keep-alive", 
            "30"]
        ports:
        - containerPort: 8000
        securityContext:
          runAsNonRoot: true
