components/rag-sep10-2-py312/base/service-model-server.yaml
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app.kubernetes.io/instance: rag-sep10-2-py312-model-server
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: rag-sep10-2-py312-model-server
  name: rag-sep10-2-py312-model-server
spec:
  ports:
  - port: 8001
    protocol: TCP
    targetPort: 8001
  selector:
    app.kubernetes.io/instance: rag-sep10-2-py312-model-server
