components/rag-sep10-2-py312/base/service.yaml
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app.kubernetes.io/instance: rag-sep10-2-py312
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: rag-sep10-2-py312 
  name: rag-sep10-2-py312
spec:
  ports:
  - port: 8501
    protocol: TCP
    targetPort: 8501
  selector:
    app.kubernetes.io/instance: rag-sep10-2-py312
