components/rag-sep10-2-py312/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata: 
  labels: 
    app.kubernetes.io/instance: rag-sep10-2-py312
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: rag-sep10-2-py312 
  name: rag-sep10-2-py312
spec:
  port:
    targetPort: 8501
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: rag-sep10-2-py312 
    weight: 100 
  wildcardPolicy: None
